--- a/parllax/style.css
+++ b/parllax/style.css
@@ -7,8 +7,8 @@
 .wrapper{
     height: 100vh;
     width: 100vw;
-    /* overflow-x: hidden; */
-    /* overflow-y: auto; */
+    overflow-x: hidden; 
+    overflow-y: auto;
     perspective: 10px;
 }
 
