--- a/Grid/style.css
+++ b/Grid/style.css
@@ -1,22 +1,47 @@
 .container{
-background-color: brown;
-height: 500px;
-border:3px solid black;
+background-color: yellow;
+height: 700px;
+border:1px solid red;
+
 display: grid;
 
-grid-template-columns:150px 1fr 1fr;
-grid-template-rows: 30px repeat(1, 1fr) 30px;
-gap: 3px;
+grid-gap:10px;
+grid-auto-rows: minmax(100px,auto);
+grid-template-columns: repeat(4,1fr);
+
+/* grid-template-columns: 300px 300px 300px;
+grid-template-rows: 250px 600px;
+
+grid-template-areas: 
+"hd hd hd hd hd hd hd hd"
+"side side side main main main main main"
+"ft ft ft ft ft ft ft ft"; */
+
 }
 
 .box{
-    border: 2px solid black;
+    border: 1px solid black;
     background-color: aqua;
-    /* width: 80px; */
-    /* height: 80px; */
+  
 }
 
-#box1, #box4{
+/* #header{
+    grid-area: hd;
+}
+
+#footer{
+    grid-area: ft;
+}
+
+#sidebar{
+    grid-area: side;
+}
+
+#content{
+    grid-area: main;
+} */
+
+/* #box1, #box4{
     grid-column-start: 1;
     grid-column-end: 4;
 }
@@ -28,5 +53,5 @@ gap: 3px;
 #box5{
     grid-column-start: 3;
      grid-column-end: 4;
-}
+} */
 
